fixed horizontal scroll

--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -1,3 +1,7 @@
+body{
+overflow-x: hidden;
+}
+
 h1{
     font-family: Open Sans;
         color: #3796DA;
@@ -338,6 +342,7 @@ margin-top: 12px;
     float: right;
     margin-right: 57px;
     margin-top: 31px;
+    border-radius: 15px;
 }
 .book{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -346,7 +351,7 @@ margin-top: 12px;
 }
 
 input, select, textarea {
-    border-radius: 2px;
+    border-radius: 25px;
     border: 2px solid #777;
     font-size: 1.25em;
     font-family: 'Nanum Gothic';
